--- a/index.css
+++ b/index.css
@@ -76,11 +76,14 @@ body{
     flex-direction: column;
     background-color:#F8FAFA;
     color: #46466A;
+    background-image: url('/evie-s-eRMA9ypZprU-unsplash.jpg');
+    background-size: cover;
+    /* background-blend-mode: overlay; */
 }
 
 .navigation{
     width:100%;
-    height: 3rem;
+    height: 4rem;
     display: flex;
     align-content: space-between;
     align-items: center;
@@ -115,9 +118,14 @@ li a:hover {
     display: flex;
     border-bottom: .1em #B1C0C6 solid;
 
+
+}
+.background_img{
+    width: 100%;
+    z-index: auto;
 }
 .name_and_title{
-    width: 70%;
+    width: 60%;
     margin: 1rem;
     display: flex;
     flex-direction: column;
@@ -130,19 +138,40 @@ li a:hover {
     font-size: 4rem;
 }
 
+
 .photo{
-    width: 30%;
+    width: 25%;
     height: auto;
     margin: 3rem;
+    margin-right: 7rem;
     float: right;
-    border-radius: 2%;
+    border-radius: 50%;
 }
 
 .about-me{
     background-color:#C3C596 ;
     width: 50%;
+    height: 40rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    margin-left: 2%;
+    padding: 2rem;
+    line-height: 2;
+}
+
+.projects{
+    background-color:#C3C596 ;
+    width: 50%;
+    height: 40rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 45%;
     padding: 2rem;
     line-height: 2;
 }
